# heehawbot-rs

./: Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
src/: callbacks.rs  error.rs  main.rs
src/commands/: mod.rs  music.rs  ping.rs  voice.rs
src/commands/music/: join.rs  leave.rs  mod.rs  play.rs  skip.rs
src/commands/utils/: age.rs  mod.rs  ping.rs
