[package]
name = "heehawbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
poise = "0.6.1"
reqwest = "0.11.24"
tokio = { version = "1.32.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tracing = "0.1.4"
tracing-subscriber ={ version = "0.3.18", features = ["env-filter"] }

[dependencies.serenity]
version = "0.12.0"
features = ["cache", "client", "rustls_backend", "standard_framework", "voice"]

[dependencies.songbird]
version = "0.4.1"
features = ["builtin-queue"]

[dependencies.symphonia]
version = "0.5.3"
features = ["mp3", "aac", "isomp4", "alac"]
